# all-day-project

./: README.md
claude/: PLAN.md
claude/maao/: Makefile  go.mod  go.sum
claude/maao/.maao/: config.example.yaml
claude/maao/cmd/maao/: main.go
claude/maao/internal/agent/: agent.go  agent_test.go  base.go  claude.go  codex.go  copilot.go  gemini.go  registry.go
claude/maao/internal/config/: config.go  loader.go  validator.go
claude/maao/internal/github/: actions.go  client.go  comment.go  issue.go  poller.go  pr.go
claude/maao/internal/notify/: email.go
claude/maao/internal/store/: sqlite.go  token_store.go  workflow_store.go
claude/maao/internal/token/: budget.go  estimator.go  tracker.go
claude/maao/internal/tui/: agent_panel.go  app.go  dashboard.go  log_viewer.go
claude/maao/internal/workspace/: branch.go  cleanup.go  worktree.go
claude/maao/prompts/development/: context_setup.md  implement_issue.md
claude/maao/prompts/planning/: analyze_plan.md  discuss_round.md  finalize_plan.md
claude/maao/prompts/review/: code_review.md  (+1 more)
codex/: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
codex/.omx/plans/: all-day-cli-implementation-plan.md  autopilot-impl.md  autopilot-spec.md
codex/all_day/: __init__.py  cli.py  models.py  service.py  storage.py
codex/tests/: test_cli.py  test_service.py
gemini/: .env.example  PLAN.md  README.md  agent_manager.py  config.py  git_manager.py  github_manager.py  main.py  requirements.txt
gemini/.gemini/: GEMINI.md
gemini/.gemini/agents/: catalog.json
gemini/.omg/: setup-scope.json
(+8 files in other folders)
